# optimal_voting

./: .gitignore  README.md  pyproject.toml
src/optimal_voting/: OptimizableRule.py  annealing.py  annealing_experiments.py  data_utils.py  evaluation.py  example_usage.py  gradient_descent.py  mixed_integer_optimization.py  optimize.py  requirements.txt  voting_utils.py
src/optimal_voting.egg-info/: PKG-INFO  SOURCES.txt
src/optimal_voting/analysis/: analyze_psr.py  annealing_experiments.py
src/optimal_voting/dev/: mixed_integer_optimization.py
tests/: evaluate_rule.py  test_c2_rule.py
